# soul

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPORTANT_FILES_FOR_AGENTS.md  LICENSE  Makefile  README.md  __init__.py  cli.py  config.py  db.py  docker-compose.yml  pr.txt  pyproject.toml  repo_tree.txt  requirements.txt  security_best_practices_report.md
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/workflows/: commit-message.yml  pages.yml  release.yml  test.yml
core/: mood_engine.py  soul_loader.py
docs/: README.md  api.md  architecture.md  cli-reference.md  drift-algorithm.md  memory-schema.md  modules.md  release-process.md  soul-design.md  testing.md
evolution/: __init__.py  drift_engine.py
memory/: __init__.py  episodic.py  shared_language.py  user_story.py
models/: __init__.py  memory.py  user_story.py
presence/: __init__.py  voice.py
scripts/: __init__.py  beat.py  docker-test.sh  install-git-hooks.sh  migrate_postgres.py  resolve-python.sh  worker.py
scripts/init/: 01-create-test-db.sql
site/: 404.html  index.html  metadata.json  package-lock.json  styles.css  vite.config.ts
site/public/: 404.html  install.sh
site/src/: App.tsx  index.css
site/src/components/: FeaturesSection.tsx  HeroSection.tsx  InstallSection.tsx  InstallTerminal.tsx  (+5 more)
soul/: __init__.py  celery_app.py  cli.py  config.py  db.py  telegram_bot.py
soul/bootstrap/: __init__.py  config.py  errors.py  feature_registry.py  logging.py  validator.py
soul/cli_support/: __init__.py  chat.py  debug.py  ink_bridge.py  memories.py  react_bridge.py  runtime.py  status.py  story.py
soul/conversation/: __init__.py  context_loader.py  extractor.py  orchestrator.py  post_processor.py  prompt_builder.py  responder.py
soul/core/: __init__.py  context_builder.py  llm_client.py  mood_engine.py  post_processor.py  presence_context.py  skill_loader.py  skill_templates.py  timezone_utils.py
soul/evolution/: drift_engine.py  milestone_tracker.py  reflection.py
soul/interfaces/: __init__.py
soul/llm/: __init__.py  client.py  parsers.py  schemas.py
soul/maintenance/: __init__.py  consolidation.py  decay.py  drift.py  jobs.py  proactive.py  reflection.py
soul/memory/: embedder.py  episodic.py  fts.py  retriever.py  scorer.py  shared_language.py  user_story.py  vector_store.py
soul/models/: __init__.py  drift_log.py  memory.py  memory_score.py  session.py  user_story.py
soul/observability/: __init__.py  debug.py  diagnostics.py  metrics.py  traces.py
soul/persistence/: __init__.py  db.py  models.py  sqlite_setup.py
soul/presence/: __init__.py  runtime.py  telegram.py  voice.py
soul/state/: __init__.py  drift.py  milestones.py  mood.py  personality.py
soul/tasks/: __init__.py  consolidate.py  drift_weekly.py  hms_decay.py  proactive.py
soul_data/: consolidation_ledger.json  drift_log.json  milestones.json  personality.json  reach_out_candidates.json  reflections.json  shared_language.json  soul.yaml  user_story.json
tasks/: consolidate.py  drift_weekly.py
tests/: conftest.py  test_background_tasks.py  test_chat_save_boost.py  test_cli_bug_fixes_exploration.py  test_cli_bug_fixes_preservation.py  test_cli_contract.py  test_cli_init.py  test_cli_memory_commands.py  test_cli_memory_contract.py  test_cli_relative_time.py  test_consolidation_profile.py  test_context_builder_memory_flow.py  test_db_hms_migrations.py  test_drift_engine.py  test_embedder.py  test_fail_fast_architecture.py  test_file_permissions.py  test_fresh_deploy.py  test_fts_memory.py  test_github_pages_contract.py  test_hms_config.py  test_hms_decay.py  test_hms_retriever.py  test_hms_scorer.py  test_live_llm_integration.py  test_llm_client.py  test_mood_engine.py  test_persona_regression.py  test_personality_drift_injection.py  test_postgres_migration.py  test_presence_context.py  test_proactive_cli_delivery.py  test_proactive_triggers.py  test_python_resolution.py  test_reflection_and_milestones.py  test_release_contract.py  test_retention_archiving.py  test_runtime_pipeline.py  test_schema_initialization.py  test_soul_contract.py  (+8 more)
tests/fixtures/: persona_conversations.json
tests/presence/: test_runtime.py  test_telegram.py  test_voice.py
tmp_integration_check/: soul.db
tmp_integration_check/soul_data/: reach_out_candidates.json  soul.yaml
ui/cli/: package.json
(+27 files in other folders)
