[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-cli"
version = "0.6.2"
description = "SOUL: an AI companion with personality, emotional presence, and memory from the terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.8.1",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "PyYAML>=6.0.2",
  "rich>=13.7.0",
  "SQLAlchemy>=2.0.30",
  "typer>=0.20.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
hybrid = [
  "sentence-transformers>=2.2.0",
]
dev = [
  "pytest>=8.3.0",
]
voice = [
  "openai-whisper",
  "sounddevice>=0.4.7",
]
all = [
  "openai-whisper",
  "sounddevice>=0.4.7",
  "sentence-transformers>=2.2.0",
]

[project.scripts]
soul = "soul.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["soul*"]

[tool.setuptools.package-data]
soul = ["templates/skills/*/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live_llm: exercises the real configured LLM provider and requires network access",
]

[tool.semantic_release]
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version"
]
version_variables = [
    "soul/__init__.py:__version__"
]
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
exclude_commit_patterns = [
    '''chore\(release\): .+''',
    '''Merged? .*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
